<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="16dp">

    <!-- Theme Switch for Dark/Light Mode -->
    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/themeSwitch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dark_mode"
        android:layout_margin="16dp" />

    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:background="@mipmap/ic_launcher"/>

    <Button
        android:id="@+id/buttonAuthenticate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_1_user_authentication"
        android:layout_marginTop="16dp"/>

    <Button
        android:id="@+id/buttonPDF"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_2_pdf_viewer"
        android:layout_marginTop="16dp"/>

    <Button
        android:id="@+id/buttonImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_3_image_capture_amp_gallery_selection"
        android:layout_marginTop="16dp"/>

    <Button
        android:id="@+id/buttonAPIPush"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_4_room_db_amp_n5_push_notification"
        android:layout_marginTop="16dp"
        />

</LinearLayout>
